# voice-chat

./: .env.example  .gitignore  README.md  decisions.md  pyproject.toml  spec.md
src/voice_chat/: __init__.py  __main__.py  assistant.py  cli.py  config.py
src/voice_chat/agent/: __init__.py  loop.py  prompts.py  state.py
src/voice_chat/audio/: __init__.py  input.py  output.py  stt.py  tts.py  vad.py  wake_word.py
src/voice_chat/llm/: __init__.py  gemini.py
src/voice_chat/tools/: __init__.py  registry.py  spotify.py  system.py  time.py  web.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_tools.py  test_gemini.py
tests/unit/: __init__.py  test_agent_loop.py  test_config.py  test_state.py  test_tools.py
